--- a/testme2.html
+++ b/testme2.html
@@ -1,14 +1,74 @@
-<html>
-<body>
-<OBJECT classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
- codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0"
- ID="top" WIDTH="550" HEIGHT="330" ALIGN="">
-<PARAM NAME=movie VALUE="top.swf"> <PARAM NAME=quality VALUE=high> <PARAM NAME=bgcolor VALUE=#FFFFFF>
-<EMBED src="top.swf" quality=high bgcolor=#FFFFFF
- swLiveConnect=FALSE WIDTH="550" HEIGHT="330" NAME="top" ALIGN=""
- TYPE="application/x-shockwave-flash" PLUGINSPAGE="http://www.macromedia.com/go/getflashplayer">
-</EMBED>
-</OBJECT>
+<html><head>
 
-</body>
-</html>
+<meta http-equiv="Content-Type" content="text/html; CHARSET=euc-jp">
+<meta name="keywords" content="青木コンセプト事務所,ビジネスコンサルティング,企業戦略,事業戦略,マーケティング戦略,商品企画,企業再生,ウエブビジネス,ウエブデザイン,ウエブ制作,ホームページ企画,ウエブジン,ネイチャーネット,ACD,Business Consulting,Web Business,Turnaround">
+<meta name="description" content="株式会社青木コンセプト事務所（戦略系ビジネスコンサルティングファーム）のホームページです。">
+<title>AOKI CONCEPT DESIGNING</title>
+<script language="JavaScript" src="indx_map.js"></script>
+<script language="JavaScript">
+<!--
+if( navigator.userAgent.indexOf("Win",0) >= 0){
+document.write('<LINK REL="STYLESHEET" TYPE="text/css" HREF="css/win.css">');
+}else{
+document.write('<LINK REL=\"STYLESHEET\" TYPE=\"text/css\" HREF=\"css/mac.css\">');
+}
+function MM_openBrWindow(theURL,winName,features) { //v2.0
+window.open(theURL,winName,features);
+}
+//-->
+</script><link rel="STYLESHEET" type="text/css" href="css/mac.css">
+<noscript><LINK REL="STYLESHEET" TYPE="text/css" HREF="css/win.css"></noscript>
+<link type="text/css" rel="stylesheet" id="webdeveloper-display-object-information" href="chrome://webdeveloper/content/stylesheets/display_object_information.css"><style type="text/css" id="webdeveloper-display-object-information-tooltips">div.webdeveloper-display-object-information { background-color: #ffff99 !important; border-color: #ffcc66 !important; color: #000000 !important;  -moz-opacity: 0.9 !important;  opacity: 0.9 !important; }</style></head><body>
+<div align="center">
+
+<table width="806" border="0" cellpadding="0" cellspacing="0">
+<tbody><tr>
+<td width="3" background="cmn/shdw01.gif"><img src="cmn/spcr.gif" height="1" width="3"></td>
+<td width="800"><img src="img/indx_01.gif" height="41" width="800" border="0"><br>
+<img src="img/indx_02.gif" height="22" width="800"><br><img src="img/indx_03.gif" height="19" width="800"><br><img src="img/indx_ttl.gif" height="35" width="800"></td>
+<td width="3" background="cmn/shdw02.gif"><img src="cmn/spcr.gif" height="1" width="3"></td>
+</tr>
+</tbody></table><img src="cmn/spcr.gif" height="2" width="1"><br>
+
+
+<table width="806" border="0" cellpadding="0" cellspacing="0">
+<tbody><tr>
+<td width="3" background="cmn/shdw01.gif"><img src="cmn/spcr.gif" height="1" width="3"></td>
+<td width="800" bgcolor="#ffffff">
+
+	<table height="400" width="800" border="0" cellpadding="0" cellspacing="0">
+
+	<tbody><tr>
+	<td nowrap="nowrap" valign="top" width="550"><script language="JavaScript" src="top.js"></script><div class="webdeveloper-display-object-information"><p>&lt;object width="550" height="330" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0"&gt;</p><p class="param">&lt;param name="movie" value="top.swf" /&gt;</p><p class="param">&lt;param name="quality" value="high" /&gt;</p><p class="param">&lt;param name="bgcolor" value="#FFFFFF" /&gt;</p><p>&lt;/object&gt;</p></div><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0" id="top" height="330" width="550" align=""> <param name="movie" value="top.swf"> <param name="quality" value="high"> <param name="bgcolor" value="#FFFFFF">   <embed src="top.swf" quality="high" bgcolor="#FFFFFF" swliveconnect="FALSE" name="top" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" height="330" width="550" align="">  </object><noscript><IMG SRC="img/acd_img.jpg" WIDTH="550" HEIGHT="330" usemap="#top" BORDER=0></noscript></td>
+	<td nowrap="nowrap" valign="top" width="250"><img src="cmn/spcr.gif" height="40" width="250" border="0"><br><a href="overview/index.html" onmouseover="_in('ovrvw',13);" onmouseout="_out('ovrvw',12);"><img src="file:///home/kevin/nas/Development/ACD/ACD-NewNetwork/appengine/2011/corp/img/indx_btn1.gif" alt="ご挨拶・会社概要" name="ovrvw" height="55" width="250" border="0"></a><br><a href="consulting/index.html" onmouseover="_in('cnsltng',15);" onmouseout="_out('cnsltng',14);"><img src="file:///home/kevin/nas/Development/ACD/ACD-NewNetwork/appengine/2011/corp/img/indx_btn2.gif" alt="ビジネスコンサルティング" name="cnsltng" height="55" width="250" border="0"></a><br><img src="img/indx_04.gif" alt="カンパニー" height="30" width="250" border="0"><br><a href="b_design/index.html" onmouseover="_in('dsgn',17);" onmouseout="_out('dsgn',16);"><img src="img/indx_btn3.gif" alt="ビジネスデザイニング" name="dsgn" height="55" width="250" border="0"></a><br><a href="web/index.html" onmouseover="_in('web',19);" onmouseout="_out('web',18);"><img src="img/indx_btn4.gif" alt="ウェブビジネス" name="web" height="55" width="250" border="0"></a><br></td>
+
+	</tr>
+	<tr><td colspan="2" height="1" nowrap="nowrap" bgcolor="#cccccc"><img src="cmn/spcr.gif" height="1" width="800"></td></tr>
+	<tr><td colspan="2" height="69" valign="bottom"><img src="img/indx_05.gif" height="15" width="800"></td></tr>
+	</tbody></table>
+
+</td>
+<td width="3" background="cmn/shdw02.gif"><img src="cmn/spcr.gif" height="1" width="3"></td>
+</tr>
+</tbody></table><img src="cmn/gry_line.gif" height="1" width="800"><br><img src="cmn/spcr.gif" height="2" width="1"><br>
+
+
+<table height="75" width="806" border="0" cellpadding="0" cellspacing="0">
+<tbody><tr>
+
+<td valign="bottom" width="3" background="cmn/shdw01.gif"><img src="cmn/spcr.gif" height="1" width="3"></td>
+<td valign="bottom" width="488" bgcolor="#ffffff">
+	<table width="488" border="0" cellpadding="0" cellspacing="0">
+	<tbody><tr>
+	<td nowrap="nowrap" width="30"><img src="cmn/spcr.gif" height="1" width="30"></td>
+	<td><font class="cap"><a href="http://www.macromedia.com/jp/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash&amp;Lang=Japanese" target="_blank"><img src="img/get_flash_player.gif" border="0"><br>このサイトをご覧になるためには最新のMacromedia Flash Playerが必要です。</a></font><br><img src="cmn/spcr.gif" height="8" width="458"></td>
+	</tr>
+	</tbody></table>
+</td>
+<td valign="bottom" width="312" align="right" bgcolor="#ffffff"><font class="bdy"><a href="javascript:MM_openBrWindow('contact.html','cntct','width=490,height=440,scrollbars=0')">Contact Us</a>   |   <a href="javascript:MM_openBrWindow('map.html','function','width=490,height=350,scrollbars=0')">Access</a>   |   <a href="sitemap.html">Sitemap</a></font><img src="cmn/spcr.gif" height="1" width="30"><br><img src="cmn/ftr_02.gif" height="20" width="312"></td>
+
+<td width="3" background="cmn/shdw02.gif"><img src="cmn/spcr.gif" height="1" width="3"></td>
+</tr>
+</tbody></table><img src="cmn/ftr_01.gif" height="3" width="806"><br>
+</div>
+</body></html>
