--- a/testme2.html
+++ b/testme2.html
@@ -1,8 +1,8 @@
 <html><head>
 
 <meta http-equiv="Content-Type" content="text/html; CHARSET=euc-jp">
-<meta name="keywords" content="é’æœ¨ã‚³ãƒ³ã‚»ãƒ—ãƒˆäº‹å‹™æ‰€,ãƒ“ã‚¸ãƒã‚¹ã‚³ãƒ³ã‚µãƒ«ãƒ†ã‚£ãƒ³ã‚°,ä¼æ¥­æˆ¦ç•¥,äº‹æ¥­æˆ¦ç•¥,ãƒãƒ¼ã‚±ãƒ†ã‚£ãƒ³ã‚°æˆ¦ç•¥,å•†å“ä¼ç”»,ä¼æ¥­å†ç”Ÿ,ã‚¦ã‚¨ãƒ–ãƒ“ã‚¸ãƒã‚¹,ã‚¦ã‚¨ãƒ–ãƒ‡ã‚¶ã‚¤ãƒ³,ã‚¦ã‚¨ãƒ–åˆ¶ä½œ,ãƒ›ãƒ¼ãƒ ãƒšãƒ¼ã‚¸ä¼ç”»,ã‚¦ã‚¨ãƒ–ã‚¸ãƒ³,ãƒã‚¤ãƒãƒ£ãƒ¼ãƒãƒƒãƒˆ,ACD,Business Consulting,Web Business,Turnaround">
-<meta name="description" content="æ ªå¼ä¼šç¤¾é’æœ¨ã‚³ãƒ³ã‚»ãƒ—ãƒˆäº‹å‹™æ‰€ï¼ˆæˆ¦ç•¥ç³»ãƒ“ã‚¸ãƒã‚¹ã‚³ãƒ³ã‚µãƒ«ãƒ†ã‚£ãƒ³ã‚°ãƒ•ã‚¡ãƒ¼ãƒ ï¼‰ã®ãƒ›ãƒ¼ãƒ ãƒšãƒ¼ã‚¸ã§ã™ã€‚">
+<meta name="keywords" content="ÀÄÌÚ¥³¥ó¥»¥×¥È»öÌ³½ê,¥Ó¥¸¥Í¥¹¥³¥ó¥µ¥ë¥Æ¥£¥ó¥°,´ë¶ÈÀïÎ¬,»ö¶ÈÀïÎ¬,¥Ş¡¼¥±¥Æ¥£¥ó¥°ÀïÎ¬,¾¦ÉÊ´ë²è,´ë¶ÈºÆÀ¸,¥¦¥¨¥Ö¥Ó¥¸¥Í¥¹,¥¦¥¨¥Ö¥Ç¥¶¥¤¥ó,¥¦¥¨¥ÖÀ©ºî,¥Û¡¼¥à¥Ú¡¼¥¸´ë²è,¥¦¥¨¥Ö¥¸¥ó,¥Í¥¤¥Á¥ã¡¼¥Í¥Ã¥È,ACD,Business Consulting,Web Business,Turnaround">
+<meta name="description" content="³ô¼°²ñ¼ÒÀÄÌÚ¥³¥ó¥»¥×¥È»öÌ³½ê¡ÊÀïÎ¬·Ï¥Ó¥¸¥Í¥¹¥³¥ó¥µ¥ë¥Æ¥£¥ó¥°¥Õ¥¡¡¼¥à¡Ë¤Î¥Û¡¼¥à¥Ú¡¼¥¸¤Ç¤¹¡£">
 <title>AOKI CONCEPT DESIGNING</title>
 <script language="JavaScript" src="indx_map.js"></script>
 <script language="JavaScript">
@@ -18,10 +18,10 @@ window.open(theURL,winName,features);
 //-->
 </script><link rel="STYLESHEET" type="text/css" href="css/mac.css">
 <noscript><LINK REL="STYLESHEET" TYPE="text/css" HREF="css/win.css"></noscript>
-<link type="text/css" rel="stylesheet" id="webdeveloper-display-object-information" href="chrome://webdeveloper/content/stylesheets/display_object_information.css"><style type="text/css" id="webdeveloper-display-object-information-tooltips">div.webdeveloper-display-object-information { background-color: #ffff99 !important; border-color: #ffcc66 !important; color: #000000 !important;  -moz-opacity: 0.9 !important;  opacity: 0.9 !important; }</style></head><body>
+</head><body>
 <div align="center">
-
 <table width="806" border="0" cellpadding="0" cellspacing="0">
+
 <tbody><tr>
 <td width="3" background="cmn/shdw01.gif"><img src="cmn/spcr.gif" height="1" width="3"></td>
 <td width="800"><img src="img/indx_01.gif" height="41" width="800" border="0"><br>
@@ -37,14 +37,14 @@ window.open(theURL,winName,features);
 <td width="800" bgcolor="#ffffff">
 
 	<table height="400" width="800" border="0" cellpadding="0" cellspacing="0">
-
 	<tbody><tr>
-	<td nowrap="nowrap" valign="top" width="550"><script language="JavaScript" src="top.js"></script><div class="webdeveloper-display-object-information"><p>&lt;object width="550" height="330" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0"&gt;</p><p class="param">&lt;param name="movie" value="top.swf" /&gt;</p><p class="param">&lt;param name="quality" value="high" /&gt;</p><p class="param">&lt;param name="bgcolor" value="#FFFFFF" /&gt;</p><p>&lt;/object&gt;</p></div><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0" id="top" height="330" width="550" align=""> <param name="movie" value="top.swf"> <param name="quality" value="high"> <param name="bgcolor" value="#FFFFFF">   <embed src="top.swf" quality="high" bgcolor="#FFFFFF" swliveconnect="FALSE" name="top" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" height="330" width="550" align="">  </object><noscript><IMG SRC="img/acd_img.jpg" WIDTH="550" HEIGHT="330" usemap="#top" BORDER=0></noscript></td>
-	<td nowrap="nowrap" valign="top" width="250"><img src="cmn/spcr.gif" height="40" width="250" border="0"><br><a href="overview/index.html" onmouseover="_in('ovrvw',13);" onmouseout="_out('ovrvw',12);"><img src="file:///home/kevin/nas/Development/ACD/ACD-NewNetwork/appengine/2011/corp/img/indx_btn1.gif" alt="ã”æŒ¨æ‹¶ãƒ»ä¼šç¤¾æ¦‚è¦" name="ovrvw" height="55" width="250" border="0"></a><br><a href="consulting/index.html" onmouseover="_in('cnsltng',15);" onmouseout="_out('cnsltng',14);"><img src="file:///home/kevin/nas/Development/ACD/ACD-NewNetwork/appengine/2011/corp/img/indx_btn2.gif" alt="ãƒ“ã‚¸ãƒã‚¹ã‚³ãƒ³ã‚µãƒ«ãƒ†ã‚£ãƒ³ã‚°" name="cnsltng" height="55" width="250" border="0"></a><br><img src="img/indx_04.gif" alt="ã‚«ãƒ³ãƒ‘ãƒ‹ãƒ¼" height="30" width="250" border="0"><br><a href="b_design/index.html" onmouseover="_in('dsgn',17);" onmouseout="_out('dsgn',16);"><img src="img/indx_btn3.gif" alt="ãƒ“ã‚¸ãƒã‚¹ãƒ‡ã‚¶ã‚¤ãƒ‹ãƒ³ã‚°" name="dsgn" height="55" width="250" border="0"></a><br><a href="web/index.html" onmouseover="_in('web',19);" onmouseout="_out('web',18);"><img src="img/indx_btn4.gif" alt="ã‚¦ã‚§ãƒ–ãƒ“ã‚¸ãƒã‚¹" name="web" height="55" width="250" border="0"></a><br></td>
 
+	<td nowrap="nowrap" valign="top" width="550"><script language="JavaScript" src="top.js"></script><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0" id="top" height="330" width="550" align=""> <param name="movie" value="top.swf"> <param name="quality" value="high"> <param name="bgcolor" value="#FFFFFF">   <embed src="top.swf" quality="high" bgcolor="#FFFFFF" swliveconnect="FALSE" name="top" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" height="330" width="550" align="">  </object><noscript><IMG SRC="img/acd_img.jpg" WIDTH="550" HEIGHT="330" usemap="#top" BORDER=0></noscript></td>
+	<td nowrap="nowrap" valign="top" width="250"><img src="cmn/spcr.gif" height="40" width="250" border="0"><br><a href="overview/index.html" onmouseover="_in('ovrvw',13);" onmouseout="_out('ovrvw',12);"><img src="img/indx_btn1.gif" alt="¤´°§»¢¡¦²ñ¼Ò³µÍ×" name="ovrvw" height="55" width="250" border="0"></a><br><a href="consulting/index.html" onmouseover="_in('cnsltng',15);" onmouseout="_out('cnsltng',14);"><img src="img/indx_btn2.gif" alt="¥Ó¥¸¥Í¥¹¥³¥ó¥µ¥ë¥Æ¥£¥ó¥°" name="cnsltng" height="55" width="250" border="0"></a><br><img src="img/indx_04.gif" alt="¥«¥ó¥Ñ¥Ë¡¼" height="30" width="250" border="0"><br><a href="b_design/index.html" onmouseover="_in('dsgn',17);" onmouseout="_out('dsgn',16);"><img src="img/indx_btn3.gif" alt="¥Ó¥¸¥Í¥¹¥Ç¥¶¥¤¥Ë¥ó¥°" name="dsgn" height="55" width="250" border="0"></a><br><a href="web/index.html" onmouseover="_in('web',19);" onmouseout="_out('web',18);"><img src="img/indx_btn4.gif" alt="¥¦¥§¥Ö¥Ó¥¸¥Í¥¹" name="web" height="55" width="250" border="0"></a><br></td>
 	</tr>
 	<tr><td colspan="2" height="1" nowrap="nowrap" bgcolor="#cccccc"><img src="cmn/spcr.gif" height="1" width="800"></td></tr>
 	<tr><td colspan="2" height="69" valign="bottom"><img src="img/indx_05.gif" height="15" width="800"></td></tr>
+
 	</tbody></table>
 
 </td>
@@ -55,13 +55,13 @@ window.open(theURL,winName,features);
 
 <table height="75" width="806" border="0" cellpadding="0" cellspacing="0">
 <tbody><tr>
-
 <td valign="bottom" width="3" background="cmn/shdw01.gif"><img src="cmn/spcr.gif" height="1" width="3"></td>
 <td valign="bottom" width="488" bgcolor="#ffffff">
 	<table width="488" border="0" cellpadding="0" cellspacing="0">
 	<tbody><tr>
+
 	<td nowrap="nowrap" width="30"><img src="cmn/spcr.gif" height="1" width="30"></td>
-	<td><font class="cap"><a href="http://www.macromedia.com/jp/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash&amp;Lang=Japanese" target="_blank"><img src="img/get_flash_player.gif" border="0"><br>ã“ã®ã‚µã‚¤ãƒˆã‚’ã”è¦§ã«ãªã‚‹ãŸã‚ã«ã¯æœ€æ–°ã®Macromedia Flash PlayerãŒå¿…è¦ã§ã™ã€‚</a></font><br><img src="cmn/spcr.gif" height="8" width="458"></td>
+	<td><font class="cap"><a href="http://www.macromedia.com/jp/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash&amp;Lang=Japanese" target="_blank"><img src="img/get_flash_player.gif" border="0"><br>¤³¤Î¥µ¥¤¥È¤ò¤´Í÷¤Ë¤Ê¤ë¤¿¤á¤Ë¤ÏºÇ¿·¤ÎMacromedia Flash Player¤¬É¬Í×¤Ç¤¹¡£</a></font><br><img src="cmn/spcr.gif" height="8" width="458"></td>
 	</tr>
 	</tbody></table>
 </td>
