--- a/testme.html
+++ b/testme.html
@@ -10,7 +10,7 @@
 <EMBED src="top.swf" quality=high bgcolor=#FFFFFF 
  swLiveConnect=FALSE WIDTH="550" HEIGHT="330" NAME="top" ALIGN=""
  TYPE="application/x-shockwave-flash" PLUGINSPAGE="http://www.macromedia.com/go/getflashplayer">
-</EMBED>');
+</EMBED>
 </OBJECT>
 </script>
 </body>
