--- a/testme.html
+++ b/testme.html
@@ -1,16 +1,8 @@
 <html>
 <body>
 
-<OBJECT classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000"
- codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0"
- ID="top" WIDTH="550" HEIGHT="330" ALIGN="">
-<PARAM NAME=movie VALUE="top.swf"> 
-<PARAM NAME=quality VALUE=high> 
-<PARAM NAME=bgcolor VALUE=#FFFFFF>
-<EMBED src="top.swf" quality=high bgcolor=#FFFFFF 
- swLiveConnect=FALSE WIDTH="550" HEIGHT="330" NAME="top" ALIGN=""
- TYPE="application/x-shockwave-flash" PLUGINSPAGE="http://www.macromedia.com/go/getflashplayer">
-</EMBED>
-</OBJECT>
+<object data="top.swf" type="application/x-shockwave-flash" id="ACD" width="550" height="330">
+  <param name="movie" value="top.swf" />
+</object>
 </body>
 </html>
