--- a/testme.html
+++ b/testme.html
@@ -1,8 +1,10 @@
 <html>
 <body>
 
-<object data="top.swf" type="application/x-shockwave-flash" id="ACD" width="550" height="330">
+<object data="top.swf" type="application/x-shockwave-flash" id="ACD" 
+ width="550" height="330">
   <param name="movie" value="top.swf" />
+  <param name="FlashVars" value="value" />
 </object>
 </body>
 </html>
