--- a/testme.html
+++ b/testme.html
@@ -3,6 +3,7 @@
 
 <object data="top.swf" type="application/x-shockwave-flash" id="ACD" 
  width="550" height="330">
+  <param name="base" value="." />
   <param name="movie" value="top.swf" />
   <param name="FlashVars" value="value" />
 </object>
